@@ -9,7 +9,7 @@ public class TableBuilder {
 	private final Map<String, String> tableProperties;
 
 	public TableBuilder(String tableName) {
-		this(tableName, new LinkedHashMap<>());
+		this(tableName, new LinkedHashMap<String, String>());
 	}
 
 	public TableBuilder(String tableName, Map<String, String> tableProperties) {
@@ -19,37 +19,35 @@ public class TableBuilder {
 	}
 
 	public TableBuilder addColumn(String columnName, String columnDescriptor) {
-		if (!columnName.trim().isEmpty() && !columnDescriptor.trim().isEmpty()) {
-			this.tableContents += "`%s` %s,\n".formatted(columnName, columnDescriptor);
+		if (!columnName.trim().equals("") && !columnDescriptor.trim().equals("")) {
+			this.tableContents += String.format("`%s` %s,\n", columnName, columnDescriptor);
 		}
 		return this;
 	}
 
 	public TableBuilder addPrimaryKey(String primaryKey) {
-		if (!primaryKey.trim().isEmpty()) {
-			this.tableContents += "PRIMARY KEY (`%s`),\n".formatted(primaryKey);
+		if (!primaryKey.trim().equals("")) {
+			this.tableContents += String.format("PRIMARY KEY (`%s`),\n", primaryKey);
 		}
 		return this;
 	}
 
 	public TableBuilder addKey(String key, String refKey) {
-		if (!key.trim().isEmpty() && !refKey.trim().isEmpty()) {
-			this.tableContents += "KEY `%s` (`%s`),\n".formatted(key, refKey);
+		if (!key.trim().equals("") && !refKey.trim().equals("")) {
+			this.tableContents += String.format("KEY `%s` (`%s`),\n", key, refKey);
 		}
 		return this;
 	}
 
 	@Override
 	public String toString() {
-		var propsAsString = new StringBuilder();
-		for (var entry : tableProperties.entrySet()) {
-			propsAsString.append("%s = %s\n".formatted(entry.getKey(), entry.getValue()));
+		String result = "";
+		String propsAsString = "";
+		for(Map.Entry<String, String> entry : tableProperties.entrySet()) {
+			propsAsString += String.format("%s = %s\n", entry.getKey(), entry.getValue());
 		}
 		int indexLastComma = this.tableContents.lastIndexOf(",");
-		return "CREATE TABLE `%s`\n(\n%s\n) %s".formatted(
-			this.tableName,
-			this.tableContents.substring(0, indexLastComma),
-			propsAsString
-		);
+		result = String.format("CREATE TABLE `%s`\n(\n%s\n) %s", this.tableName, this.tableContents.substring(0, indexLastComma), propsAsString);
+		return result;
 	}
 }
